v1.3.5
- Change the way localization works. Users have choice at the first launch
- Fixed: (Linux) The download link pointed to the wrong target
- Fixed: Issue with some rare versioning with pre-release of mods
- Fixed: Crash in rare case if modID not present in modinfo.json and the modname is not the same that the one in API. When it occurs a message is displayed and a crashlog is generated for information.
- Fixed: Crash with pdf creation with cyrillic font
- Updated for linux

v1.3.4
- fixed: bad links in pdf file
- fixed: crash if a mod whose name contains the character % is placed in the [Mod_Exclusion] section of the config.ini file
- fixed: Some mods don't update if you set a limit for a game version.
- fixed: crash if modinfo.json had keys without ""
- Added: "Previous version to newiest version" added to the logfile. You could so come back to a previous easily.
- tweak: improve the logfile.txt. Some texts could not be displayed or in a bad way.

v1.3.3
- fixed: crash when mods do not have a modid key in the modinfo.json.
- added: a crash-log.txt file is generated when a common crash occurs.
- fixed: in some rare cases mods don't update if you set a limit for the game version.

v1.3.2
- fixed: another crash with some rare mods due to update to 1.3.0

v1.3.1
- fixed: crash in some case due to update to 1.3.0

v1.3.0
- Optional : You can now generate a pdf file of your mod list
- Some code clean-up and optimization
- German, Italian and Ukrainian added (DeepL)

v1.2.0
- fixed french typo
- for server : now the script can be executed in command line with arguments.

v1.1.4
- Add Spanish language - Thanks to Sir-Ryu
- Change russian text.
- Possibility of choosing a language other than that of the OS.

v1.1.3
- Add Brazilian language - Thanks to Yskar
- some fix for language variable

v1.1.2:
- some fixes and clean old code for net7 experimenal version
- linux version

v1.1.1:
- fixed : another versioning issue

v1.1.0: